@@ -3,6 +3,7 @@ pyroscope (0.3.5) hardy; urgency=low
   * rtcontrol: Added "tagged" field and "--tag" option to set them
   * rtcontrol: Added "views" field that uses the TaggedAsFilter for selection
   * rtcontrol: All named custom attributes are available as "custom_NAME"
+  * rtcontrol: Added --column-headers option
   * xmlrpc-c is now checked for 64 bit support when connecting
 
  -- pyroscope <pyroscope.project@gmail.com>  Wed, 18 Aug 2010 00:37:40 +0200
